--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 node_modules/electron/dist/electron.exe filter=lfs diff=lfs merge=lfs -text
+release_builds/calculator-win32-ia32/calculator.exe filter=lfs diff=lfs merge=lfs -text
